--- a/webshop-app/src/components/CSS/Navbar.css
+++ b/webshop-app/src/components/CSS/Navbar.css
@@ -5,16 +5,17 @@ nav{
     justify-content: space-around;
     width: 100%;
     height: 3rem;
-    background-color:lightgrey;
+    background-color: #212121;
 }
 
 .navLinks{
     text-decoration: unset;
-    color:black;
+    color:white;
 }
 
 .navButton{
     background-color: unset;
     border:unset;
-    border-bottom:1px solid black
+    border-bottom:1px solid white;
+    color: white;
 }
