--- a/webshop-app/src/components/CSS/Navbar.css
+++ b/webshop-app/src/components/CSS/Navbar.css
@@ -2,15 +2,21 @@
 nav{
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
-    height: 3rem;
+    height: 5rem;
     background-color: #212121;
+}
+
+.links {
+    margin: 2rem;
 }
 
 .navLinks{
     text-decoration: unset;
     color:white;
+    margin: 0.7rem;
+    font-size: 1.3rem;
 }
 
 .navButton{
@@ -18,4 +24,6 @@ nav{
     border:unset;
     border-bottom:1px solid white;
     color: white;
+    margin-right: 2.5rem;
+    font-size: 1.3rem;
 }
