--- a/webshop-app/src/pages/CSS/Shop.css
+++ b/webshop-app/src/pages/CSS/Shop.css
@@ -5,31 +5,56 @@
 
 }
 
+/*left side, products*/
+
 .wrapper-products {
     width: 80%;
-    padding: 4rem;
+    padding: 4rem 0 4rem 4rem;
     flex: 1;
     background-color: #E5E5E5;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 }
 
+.card {
+    width: 15rem;
+    height: 20.5rem;
+    background-color: white;
+    border-radius: 18px;
+    display: flex;
+    justify-content: center;
+}
+
+.img {
+    width: 12rem;
+    height: 12rem;
+    margin-top: 1.5rem;
+}
+
+.card-txts {
+    margin: 0.5rem;
+}
+
+.btn-card {
+    width: 12rem;
+    height: 2rem;
+    border-radius: 10px;
+    border: none;
+    background-color: grey;
+}
+
+/*right side. cart*/
 .wrapper-cart {
     background-color: #E5E5E5;
     width: 20%;
     height: 100vh;
 }
 
-.card {
-    width: 15rem;
-    height:20rem;
-    background-color: white;
-    border-radius: 18px;
-}
-
 .cart {
-    width: 18rem;
-    height: 25rem;
+    width: 20rem;
+    height: 28rem;
     background-color: white;
-    margin: 4rem 3rem 4rem 3rem;
+    margin: 4rem 3rem 4rem 0;
     border-radius: 18px;
-
+    padding: 1.5rem;
 }
