--- a/webshop-app/src/pages/CSS/Shop.css
+++ b/webshop-app/src/pages/CSS/Shop.css
@@ -1,6 +1,6 @@
 .container {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
 
 }
@@ -35,12 +35,17 @@
     margin: 0.5rem;
 }
 
+.card-text {
+    margin: 0;
+}
+
 .btn-card {
     width: 12rem;
     height: 2rem;
     border-radius: 10px;
     border: none;
-    background-color: grey;
+    background-color: rgb(197, 197, 197);
+    cursor: pointer;
 }
 
 /*right side. cart*/
