--- a/webshop-app/src/pages/CSS/Checkout.css
+++ b/webshop-app/src/pages/CSS/Checkout.css
@@ -11,6 +11,7 @@
 .checkoutProducts {
     flex: 1;
     display: flex;
+    flex-direction: column;
 }
 
 .checkout{
@@ -24,3 +25,10 @@
     height: 20rem;
 }
 
+.checkoutInput{
+    padding:5px;
+}
+
+.checkoutButton{
+    padding:5px;
+}
