--- a/webshop-app/src/components/CSS/Navbar.css
+++ b/webshop-app/src/components/CSS/Navbar.css
@@ -1,8 +1,16 @@
 
-nav{
+.loggedInNav{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+    height: 5rem;
+    background-color: #212121;
+}
+
+.loggedOutNav{
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 5rem;
     background-color: #212121;
