--- a/webshop-app/src/components/CSS/Cart.css
+++ b/webshop-app/src/components/CSS/Cart.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
-   
+    box-shadow: 0px 25px 40px #03437033;
     background-color: white;
     top: 80px;
     right: 0;
@@ -13,6 +13,23 @@
     border-radius: 0% 0% 0% 10%;
 
 }
+
+.header{
+    margin: auto;
+    width: 90%;
+    height: 15%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   }
+.heading{
+    font-size: .9rem;
+    font-family: ‘Open Sans’;
+    font-weight: 700;
+    color: #212121;
+    
+   }
+
 .cart-items {
     height: 240px;
     display: flex;
