--- a/webshop-app/src/pages/CSS/Login.css
+++ b/webshop-app/src/pages/CSS/Login.css
@@ -3,7 +3,8 @@
 .loginContainer {
     width:100%;
     height: 91.5vh;
-    background-image: url('https://wallpapercave.com/wp/wp2186239.jpg');
+    background: url('https://wallpapercave.com/wp/wp2186239.jpg');
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.308);
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -20,6 +21,7 @@
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     border-radius: 5px;
     background-color: rgba(218, 228, 238, 0.883);
+
 }
 
 .loginForm input {
